--- a/.github/workflows/test-and-coverage.yml
+++ b/.github/workflows/test-and-coverage.yml
@@ -30,9 +30,10 @@ jobs:
         pytest --cov=ollama_proxy --cov-report=term-missing --cov-report=xml --cov-report=html
 
     - name: Upload coverage to Codecov
+      if: github.ref == 'refs/heads/main'
+      continue-on-error: true
       uses: codecov/codecov-action@v4
       with:
-        token: ${{ secrets.CODECOV_TOKEN }}
         files: ./coverage.xml
         flags: unittests
         name: codecov-umbrella
@@ -40,6 +41,7 @@ jobs:
 
     - name: Generate coverage badge
       if: github.ref == 'refs/heads/main'
+      continue-on-error: true
       run: |
         COVERAGE=$(python -c "import xml.etree.ElementTree as ET; tree = ET.parse('coverage.xml'); root = tree.getroot(); print(root.attrib['line-rate'])")
         COVERAGE_PERCENT=$(python -c "print(f'{float($COVERAGE) * 100:.0f}')")
@@ -48,6 +50,7 @@ jobs:
 
     - name: Create coverage badge
       if: github.ref == 'refs/heads/main'
+      continue-on-error: true
       uses: schneegans/dynamic-badges-action@v1.7.0
       with:
         auth: ${{ secrets.GIST_SECRET }}
@@ -61,6 +64,7 @@ jobs:
 
     - name: Upload coverage report
       if: github.ref == 'refs/heads/main'
+      continue-on-error: true
       uses: actions/upload-artifact@v4
       with:
         name: coverage-report
@@ -69,6 +73,7 @@ jobs:
 
     - name: Comment PR with coverage
       if: github.event_name == 'pull_request'
+      continue-on-error: true
       uses: py-cov-action/python-coverage-comment-action@v3
       with:
         GITHUB_TOKEN: ${{ github.token }}
