--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -59,7 +59,7 @@ jobs:
     - name: Log in to Harbor Registry
       uses: docker/login-action@v3
       with:
-        registry: ${{ secrets.HARBOR_REGISTRY }}
+        registry: container.hect.dev
         username: ${{ secrets.HARBOR_USERNAME }}
         password: ${{ secrets.HARBOR_PASSWORD }}
 
@@ -68,7 +68,7 @@ jobs:
       uses: docker/metadata-action@v5
       with:
         images: |
-          ${{ secrets.HARBOR_REGISTRY }}/${{ secrets.HARBOR_PROJECT }}/${{ env.DOCKER_IMAGE_NAME }}
+          container.hect.dev/affine/${{ env.DOCKER_IMAGE_NAME }}
         tags: |
           type=raw,value=latest,enable={{is_default_branch}}
           type=raw,value=${{ steps.version.outputs.version }},enable={{is_default_branch}}
@@ -101,6 +101,6 @@ jobs:
         echo "" >> $GITHUB_STEP_SUMMARY
         echo "### Pull commands:" >> $GITHUB_STEP_SUMMARY
         echo '```bash' >> $GITHUB_STEP_SUMMARY
-        echo "docker pull ${{ secrets.HARBOR_REGISTRY }}/${{ secrets.HARBOR_PROJECT }}/${{ env.DOCKER_IMAGE_NAME }}:latest" >> $GITHUB_STEP_SUMMARY
-        echo "docker pull ${{ secrets.HARBOR_REGISTRY }}/${{ secrets.HARBOR_PROJECT }}/${{ env.DOCKER_IMAGE_NAME }}:${{ steps.version.outputs.version }}" >> $GITHUB_STEP_SUMMARY
+        echo "docker pull container.hect.dev/affine/${{ env.DOCKER_IMAGE_NAME }}:latest" >> $GITHUB_STEP_SUMMARY
+        echo "docker pull container.hect.dev/affine/${{ env.DOCKER_IMAGE_NAME }}:${{ steps.version.outputs.version }}" >> $GITHUB_STEP_SUMMARY
         echo '```' >> $GITHUB_STEP_SUMMARY
