--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -38,12 +38,19 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
     if: github.event_name != 'pull_request'
+    permissions:
+      contents: read
+      id-token: write
+      packages: write
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
+
+    - name: Install Cosign
+      uses: sigstore/cosign-installer@v3.7.0
 
     - name: Generate version tag
       id: version
@@ -78,6 +85,7 @@ jobs:
           type=sha,prefix=sha-
 
     - name: Build and push Docker images
+      id: build-and-push
       uses: docker/build-push-action@v5
       with:
         context: .
@@ -87,6 +95,17 @@ jobs:
         labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
+
+    - name: Sign container images with cosign
+      env:
+        DIGEST: ${{ steps.build-and-push.outputs.digest }}
+        TAGS: ${{ steps.meta.outputs.tags }}
+      run: |
+        echo "Signing images with digest: ${DIGEST}"
+        for tag in ${TAGS}; do
+          echo "Signing: ${tag}@${DIGEST}"
+          cosign sign --yes "${tag}@${DIGEST}"
+        done
 
     - name: Generate build summary
       run: |
@@ -99,8 +118,20 @@ jobs:
         echo "${{ steps.meta.outputs.tags }}" >> $GITHUB_STEP_SUMMARY
         echo '```' >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
+        echo "### Image digest:" >> $GITHUB_STEP_SUMMARY
+        echo '```' >> $GITHUB_STEP_SUMMARY
+        echo "${{ steps.build-and-push.outputs.digest }}" >> $GITHUB_STEP_SUMMARY
+        echo '```' >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
         echo "### Pull commands:" >> $GITHUB_STEP_SUMMARY
         echo '```bash' >> $GITHUB_STEP_SUMMARY
         echo "docker pull container.hect.dev/affine/${{ env.DOCKER_IMAGE_NAME }}:latest" >> $GITHUB_STEP_SUMMARY
         echo "docker pull container.hect.dev/affine/${{ env.DOCKER_IMAGE_NAME }}:${{ steps.version.outputs.version }}" >> $GITHUB_STEP_SUMMARY
+        echo '```' >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "### Verify signature:" >> $GITHUB_STEP_SUMMARY
+        echo '```bash' >> $GITHUB_STEP_SUMMARY
+        echo "cosign verify container.hect.dev/affine/${{ env.DOCKER_IMAGE_NAME }}:latest \\" >> $GITHUB_STEP_SUMMARY
+        echo "  --certificate-identity-regexp=https://github.com/${{ github.repository }} \\" >> $GITHUB_STEP_SUMMARY
+        echo "  --certificate-oidc-issuer=https://token.actions.githubusercontent.com" >> $GITHUB_STEP_SUMMARY
         echo '```' >> $GITHUB_STEP_SUMMARY
